fixed alignment

--- a/public/src/scss/components/Dashboard/Decks.scss
+++ b/public/src/scss/components/Dashboard/Decks.scss
@@ -103,6 +103,7 @@
 		> .options > .trigger {
 			display: flex;
 			justify-content: center;
+			align-items: center;
 			width: 40px;
 			height: 40px;
 			border: 2px solid transparentize(#eee, 0.8376);
