--- a/public/src/scss/components/Modal/Confirmation.scss
+++ b/public/src/scss/components/Modal/Confirmation.scss
@@ -67,6 +67,7 @@
 		> button {
 			display: flex;
 			justify-content: center;
+			align-items: center;
 			flex-shrink: 0;
 			padding: 0 14px;
 			font-weight: bold;
