--- a/public/src/scss/index.scss
+++ b/public/src/scss/index.scss
@@ -109,6 +109,7 @@ select,
 textarea {
 	font-family: inherit;
 	font-size: 100%;
+	vertical-align: middle;
 	margin: 0;
 }
 
